# peek

./: .dockerignore  .gitignore  ARCH.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  ghcr.yml
crates/peek-client/: Cargo.toml
crates/peek-client/src/: lib.rs  main.rs  pages.rs
crates/peek-client/src/pages/: error.css  error.html  status.css  status.html
crates/peek-proto/: Cargo.toml
crates/peek-proto/src/: lib.rs
crates/peek-relay/: Cargo.toml
crates/peek-relay/src/: handler.rs  lib.rs  main.rs  pages.rs  rate_limit.rs  registry.rs
crates/peek-relay/src/pages/: password.css  password.html  status.html
crates/peek-relay/tests/: integration.rs
scripts/: load-test.sh
