[package]
name = "peek-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "peek"
path = "src/main.rs"

[dependencies]
peek-proto = { path = "../peek-proto" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tracing = "0.1"
rand = "0.10"
url = "2"
serde_json = "1"
thiserror = "2"
