[package]
name = "peek-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "peek"
path = "src/main.rs"

[dependencies]
peek-proto = { path = "../peek-proto" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tracing = "0.1"
url = "2"
serde_json = "1"
thiserror = "2"
