[package]
name = "peek-relay"
version.workspace = true
edition.workspace = true

[dependencies]
peek-proto = { path = "../peek-proto" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.10"
http-body-util = "0.1"
futures-util = "0.3"
serde_json = "1"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
urlencoding = "2"
subtle = "2"

[dev-dependencies]
peek-client = { path = "../peek-client" }
reqwest = { version = "0.13", default-features = false }
http-body-util = "0.1"
